[package]
name = "duansheli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
serde = {version = "1.0.228", features = ["derive"]}
toml = "0.9.11"

[dev-dependencies]
filetime = "0.2.27"
tempfile = "3.25.0"
